# narrative-inteligence-engine

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_mvp_tables.py
infra/compose/: docker-compose.yml
libs/core/core/: __init__.py  db.py  domain.py  models.py  repos.py  schemas.py
services/api/: Dockerfile  main.py
services/ui/: Dockerfile  app.py
services/worker/: Dockerfile  jobs.py  worker.py
tests/: test_documents_api.py  test_health.py  test_ingest_rss.py
