[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narrative-inteligence-engine"
version = "0.1.0"
description = "Monorepo base com API, worker e UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "rq>=1.16,<2.0",
  "redis>=5.0,<6.0",
  "streamlit>=1.40,<2.0",
  "pydantic>=2.8,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "requests>=2.32,<3.0",
  "feedparser>=6.0,<7.0",
  "beautifulsoup4>=4.12,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.8,<1.0",
  "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
where = ["libs/core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["core", "services.api"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
